[package]
name = "marble_run"
version = "0.1.0"
edition = "2024"
authors = ["Lucas F.Martins <dyncoch@gmail.com>"]

[dependencies]
bevy = { version = "0.14", features = ["default"] }
bevy_rapier3d = { version = "0.27", features = ["simd-stable"] }

# For WebAssembly builds later
[target.wasm32-unknown-unknown.dependencies]
web-sys = "0.3"
